namespace Assets.Scripts.Core
{
    public static class AnimatorStrings
    {
        public const string KICK = "Kick";
        public const string IS_MOVING = "IsMoving";
        public const string IS_CUTTING = "IsCutting";

        // используется для аниматора кнопки
        public const string APPEAR = "Appear";
        public const string DISAPPEAR = "Disappear";
        public const string PRESSED = "Pressed";
    }
}